import "ApiResponse.proto";
import "Unit.proto";

message RepairUnitResponse{
	optional ApiResponse response = 1;//结果
	repeated Unit units = 2;//最新unit数据
	optional int32 repairEndTime = 3;//距离Unit维修结束时间（秒）
    optional int32 repairTotalTime = 4;//当前Unit维修需要总时间（秒）
}